# scratchpad

./: CMakeLists.txt
src/bst/: bst.c  bst.h
src/util/: ostream.c  ostream.h
test/: bst-test.c  ostream-test.c
